feat: Imlement Tomorrow work graph
